--- a/rectmesh.ipynb
+++ b/rectmesh.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e9f9c8c2af959609d0998d3ea158be2915b2cc185d26059c7e5ab20dbf5295e5"
+  "signature": "sha256:f0fd450d5d326dc8e32fc0d5ad0cab66c42a5701b6f885b51a3f7343c56947e4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,7 +89,7 @@
       "        self.num_inside = None\n",
       "        self.num_neumann = None\n",
       "        self.num_dirichlet = None\n",
-      "        \n",
+      "        self.dirichlet_values = None\n",
       "        return\n",
       "    \n",
       "    def make_mask(self): # winding points way\n",
@@ -151,6 +151,7 @@
       "                    el_num += 1\n",
       "        self.num_neumann = el_num - self.num_inside \n",
       "        \n",
+      "        self.dirichlet_values = np.zeros(self.mask_nnz - self.num_neumann - self.num_inside)\n",
       "        for i in xrange(len(self.dirichlet_boundary)):\n",
       "            ind1 = self.dirichlet_boundary[i][0]\n",
       "            ind2 = self.dirichlet_boundary[i][1]\n",
@@ -158,6 +159,7 @@
       "            for j in xrange(len(ind1)):\n",
       "                for k in xrange(len(ind2)):\n",
       "                    order[(ind1[j], ind2[k])] = el_num\n",
+      "                    el_num\n",
       "                    el_num += 1\n",
       "        self.num_dirichlet = el_num - (self.num_inside + self.num_neumann)\n",
       "        \n",
@@ -297,15 +299,97 @@
       "        \n",
       "        f[k] = rhs[i,j]\n",
       "        \n",
+      "    mask_ext = np.zeros((self.mesh_size[0]+2, self.mesh_size[1]+2))\n",
+      "    mask_ext[1:self.mesh_size[0]+1, 1:self.mesh_size[1]+1] = mesh.mask\n",
+      "    \n",
       "    for k in xrange(mesh.num_inside, mesh.num_inside + mesh.num_neumann):\n",
       "        \n",
-      "        [i,j] = order_inv[k]       \n",
+      "        [i,j] = order_inv[k]   \n",
+      "        m_if = mask_ext[i+2, j+1]\n",
+      "        m_ib = mask_ext[i, j+1]\n",
+      "        m_jf = mask_ext[i+1, j+2]\n",
+      "        m_jb = mask_ext[i+1, j]\n",
       "        \n",
-      "        if i==0:\n",
+      "        if m_ib==0:\n",
       "            \n",
+      "            dx_f = x[i + 1] - x[i]\n",
+      "        \n",
+      "            dy_f = y[j + 1] - y[j]\n",
+      "            dy_b = y[j] - y[j - 1]\n",
+      "            dy_c = y[j + 1] - y[j - 1]\n",
       "                \n",
+      "            k_if_jc = order[(i+1, j)]\n",
+      "            k_ic_jf = order[(i, j+1)]\n",
+      "            k_ic_jb = order[(i, j-1)]\n",
       "        \n",
+      "            A[k] = -2./dx_f**2 - 2./dy_f/dy_b\n",
+      "            A[k_if_jc] = 2./dx_f**2\n",
+      "            A[k_ic_jf] = 2./dy_f/dy_c\n",
+      "            A[k_ic_jb] =  2./dy_b/dy_c\n",
+      "            \n",
+      "            f[k] = rhs[i,j]\n",
+      "            \n",
+      "        elif m_if==0:\n",
+      "            \n",
+      "            dx_b = x[i] - x[i - 1]\n",
       "        \n",
+      "            dy_f = y[j + 1] - y[j]\n",
+      "            dy_b = y[j] - y[j - 1]\n",
+      "            dy_c = y[j + 1] - y[j - 1]\n",
+      "        \n",
+      "            k_if_jc = order[(i+1, j)]\n",
+      "            k_ib_jc = order[(i-1, j)]\n",
+      "            k_ic_jf = order[(i, j+1)]\n",
+      "            k_ic_jb = order[(i, j-1)]\n",
+      "        \n",
+      "            A[k] = -2./dx_b**2 - 2./dy_f/dy_b\n",
+      "            A[k_ib_jc] = 2./dx_b**2\n",
+      "            A[k_ic_jf] = 2./dy_f/dy_c\n",
+      "            A[k_ic_jb] =  2./dy_b/dy_c\n",
+      "        \n",
+      "            f[k] = rhs[i,j]\n",
+      "            \n",
+      "        elif m_jb==0:\n",
+      "            \n",
+      "            dx_f = x[i + 1] - x[i]\n",
+      "            dx_b = x[i] - x[i - 1]\n",
+      "            dx_c = x[i + 1] - x[i - 1]\n",
+      "        \n",
+      "            dy_f = y[j + 1] - y[j]\n",
+      "        \n",
+      "            k_if_jc = order[(i+1, j)]\n",
+      "            k_ib_jc = order[(i-1, j)]\n",
+      "            k_ic_jf = order[(i, j+1)]\n",
+      "        \n",
+      "            A[k] = -2./dx_f/dx_b - 2./dy_f**2\n",
+      "            A[k_if_jc] = 2./dx_f/dx_c\n",
+      "            A[k_ib_jc] = 2./dx_b/dx_c\n",
+      "            A[k_ic_jf] = 2./dy_f**2\n",
+      "        \n",
+      "            f[k] = rhs[i,j]\n",
+      "            \n",
+      "        elif m_jf==0:\n",
+      "            \n",
+      "            dx_f = x[i + 1] - x[i]\n",
+      "            dx_b = x[i] - x[i - 1]\n",
+      "            dx_c = x[i + 1] - x[i - 1]\n",
+      "        \n",
+      "            dy_b = y[j] - y[j - 1]\n",
+      "        \n",
+      "            k_if_jc = order[(i+1, j)]\n",
+      "            k_ib_jc = order[(i-1, j)]\n",
+      "            k_ic_jb = order[(i, j-1)]\n",
+      "        \n",
+      "            A[k] = -2./dx_f/dx_b - 2./dy_b**2\n",
+      "            A[k_if_jc] = 2./dx_f/dx_c\n",
+      "            A[k_ib_jc] = 2./dx_b/dx_c\n",
+      "            A[k_ic_jb] =  2./dy_b**2\n",
+      "        \n",
+      "            f[k] = rhs[i,j]\n",
+      "            \n",
+      "        else:\n",
+      "            raise Exception('Problems with mask')\n",
+      "            \n",
       "    return A, f"
      ],
      "language": "python",
@@ -359,7 +443,7 @@
      "input": [
       "%timeit 1.2+ 1.3\n",
       "%timeit 1./2\n",
-      "%timeit np.arccos(2)\n",
+      "%timeit np.arccos(0.5)\n",
       "%timeit tuple(np.array([1,2]))"
      ],
      "language": "python",
@@ -369,8 +453,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 21.9 ns per loop\n",
-        "10000000 loops, best of 3: 55.8 ns per loop"
+        "10000000 loops, best of 3: 21.6 ns per loop\n",
+        "10000000 loops, best of 3: 54.8 ns per loop"
        ]
       },
       {
@@ -378,7 +462,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "100000 loops, best of 3: 5.66 \u00b5s per loop"
+        "1000000 loops, best of 3: 2 \u00b5s per loop"
        ]
       },
       {
@@ -386,7 +470,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "100000 loops, best of 3: 2.43 \u00b5s per loop"
+        "100000 loops, best of 3: 2.44 \u00b5s per loop"
        ]
       },
       {
@@ -397,7 +481,7 @@
        ]
       }
      ],
-     "prompt_number": 114
+     "prompt_number": 130
     },
     {
      "cell_type": "code",
@@ -451,7 +535,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "[a,b] = ind"
+      "vec = sp.sparse."
      ],
      "language": "python",
      "metadata": {},
