problems with memory - fixed

--- a/rectmesh.ipynb
+++ b/rectmesh.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ff01640ed1d28a2df4f769a9baacaa2ea36f9cdf12b4b446647874d90421f6b8"
+  "signature": "sha256:3c3491a3239728207fdcad9bc8f84d682898795c326e31c95dde289c9b68a54d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -204,8 +204,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 135
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "Vendor:  Continuum Analytics, Inc.\n",
+        "Package: mkl\n",
+        "Message: trial mode expires in 28 days\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -213,7 +223,7 @@
      "input": [
       "%pylab inline\n",
       "import numpy as np\n",
-      "n = 100\n",
+      "n = 500\n",
       "#x = np.array([0.,0.3,0.5, 0.6,1.])\n",
       "#y = np.array([0.,0.3,0.4,0.5,0.8, 1.])\n",
       "x = np.linspace(0,1,n)#np.sort(np.random.random(n))\n",
@@ -239,8 +249,9 @@
       "a.add_dirichlet_boundary(range(n), [n-1], 1)\n",
       "a.add_neumann_boundary( [0], range(1,n-1), 0)\n",
       "a.add_neumann_boundary( [n-1], range(1,n-1), 0)\n",
+      "\n",
       "a.create_order()\n",
-      "a.plot()"
+      "#a.plot()"
      ],
      "language": "python",
      "metadata": {},
@@ -259,17 +270,9 @@
         "WARNING: pylab import has clobbered these variables: ['f']\n",
         "`%matplotlib` prevents importing * from pylab and numpy\n"
        ]
-      },
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEgBJREFUeJzt3V2oXNd1wPG/KjkBQ13XCFyQZASOyUfBJnEjKzEhN9gQ\nOQ8VpKVBTlJaB6oXp30pKM5DR3ooJlCKcQyOkB23UBo9xH1wirFx6itSjOUPastyYgnJrUCSQ2hC\nGkITiEUmD+dc3dFoRnNmZ+bsvZf+Pxgy587RWisLeZ81e+ZcgSRJkiRJkiRJkiRJkiRJUmjfBH4E\nHL/COQ8Dp4BjwIf7KEqS9Nv5BM2CPW1x/wzwdPv8DuBoH0VJkn5725m+uH8D+NzI8QngxmUXJEma\n7ncWEGMLcHbk+BywdQFxJUmJFrG4A2wYOx4uKK4kKcGmBcQ4D2wbOd7a/mycC74kze9t4H3z/qFF\nTO5PAX/ePt8J/B/Nt2suMxwOGQ6HlzwfP045r5QYXc8bDAa95SolxrTzxntRer3LzDUYDKqqd5kx\nJvWi5HqXnOtmEoxvp0zyLeCTwGaaRXsAXNO+drD930eAXcD/A38J/NeEOE7ukpSmy1qdzXDN6PPx\n45TzSonR9bzBYNBbrlJiTDtvvBel17vMXIPBoKp6lxljUi9KrnfZuWasrRP1eTVwcpekNHOv1Yv4\nQLWzYbuftGHDhovPx4+nPU99rc8YUXNZb5xctdVrb5rjFE7uklQ+J/ecMaLmst44uWqr196kT+6L\nuolJklQQt2UkqXxuy+SMETWX9cbJVVu99iZ9W8bJXZLK5+SeM0bUXNYbJ1dt9dobJ3dJiszJPWeM\nqLmsN06u2uq1N07ukhSZk3vOGFFzWW+cXLXVa2/SJ3dvYpKkgNyWkaTyuS2TM0bUXNYbJ1dt9dqb\n9G0ZJ3dJKp+Te84YUXNZb5xctdVrb5zcJSkyJ/ecMaLmst44uWqr1944uUtSZE7uOWNEzWW9cXLV\nVq+9SZ/cvYlJkgJyW0aSyue2TM4YUXNZb5xctdVrb9K3ZZzcJal8Tu45Y0TNZb1xctVWr71xcpek\nyJzcc8aImst64+SqrV574+QuSZE5ueeMETWX9cbJVVu99iZ9cvcmJkkKyG0ZSSqf2zI5Y0TNZb1x\nctVWr71J35Zxcpek8jm554wRNZf1xslVW732ZrmT+y7gIWAj8BjwtbHXNwP/AvwBzcXiH4B/mhDH\nyV2S0sy9ws/6AxuBk8DdwHngFWAP8NbIOfuB9wIP0Cz0J4EbgQtjsYalXAVru2rnzmW9cXLVVq+9\nuTi5L3xbZgdwGjjTHh8GdnPp4v5D4Nb2+XXAT7h8YR8t8rLnV3qt63mlxIiay3rj5KqtXnuTZtbi\nvgU4O3J8Drhj7JxDwPPAO8DvAn82LVgpV8Hartq5c1lvnFy11Wtv0hf6WYv7cMbrAF8FXgdWgJuB\n54DbgJ+Pn7h///6Lz48cOcLKykq3KiXpKjK6Vi7LTuCZkeMHgH1j5zwN3Dly/B/AH02INfThw4cP\nH0mPuc2a3F8FbgG202y7fI7mA9VRJ2g+cH2B5oPU9wP/PSlYKW9xantLljuX9cbJVVu99iZ9W6bL\nn7qH9a9CPg48COxtXztI8w2ZJ4CbaH5XzYPAv06Ik3T1kSQt/quQizQs5SpY21U7dy7rjZOrtnrt\nzcXJvezFvcdckhSJv34gZ4youaw3Tq7a6rU3Fyf3uTm5S1L5nNxzxoiay3rj5KqtXnuTPrn7LzFJ\nUkBuy0hS+dyWyRkjai7rjZOrtnrtTfq2jJO7JJXPyT1njKi5rDdOrtrqtTdO7pIUmZN7zhhRc1lv\nnFy11WtvnNwlKTIn95wxouay3ji5aqvX3qRP7t7EJEkBuS0jSeVzWyZnjKi5rDdOrtrqtTfp2zJO\n7pJUPif3nDGi5rLeOLlqq9feOLlLUmRO7jljRM1lvXFy1VavvXFyl6TInNxzxoiay3rj5KqtXnuT\nPrl7E5MkBeS2jCSVz22ZnDGi5rLeOLlqq9fepG/LOLlLUvmc3HPGiJrLeuPkqq1ee+PkLkmRObnn\njBE1l/XGyVVbvfYmfXL3q5CSFJDbMpJUPrdlcsaImst64+SqrV57k74t4+QuSeVzcs8ZI2ou642T\nq7Z67Y2TuyRFNvda3eXbMruAE8ApYN+Uc1aA14A3gSPTAg2Hw4tXpLXn48cp55USI2ou642Tq7Z6\n7U36TDzrarAROAncDZwHXgH2AG+NnHM98ALwaeAcsBn48YRYTu6SlGbhe+47gNPAmfb4MLCbSxf3\ne4EnaRZ2mLywA+6515rLeuPkqq1ee5O+5z5rW2YLcHbk+Fz7s1G3ADcAq8CrwBeTKpEkLcysyb3L\nVso1wEeAu4BrgReBozR79JcYvQKNX42mvdb1vFJiRM1lvXFy1VavvUkza3E/D2wbOd7G+vbLmrM0\nWzG/bB/fA25jwuI+GAwAOHDgAKurq6ysrABlvJ1aRIyouaw3Tq7a6r1ae7O2VkKzXi7DJuBtYDvw\nHuB14INj53wA+C7Nh6/XAseBD02INfThw4cPH0mPuc2a3C8A9wPP0izej9N8mLq3ff0gzdcknwHe\nAH4NHAJ+MClYyVfcRcSImst64+SqrV570xyn8CYmSSqfv34gZ4youaw3Tq7a6rU3Tu6SFJmTe84Y\nUXNZb5xctdVrb9Ind/8lJkkKyG0ZSSqf2zI5Y0TNZb1xctVWr71J35Zxcpek8jm554wRNZf1xslV\nW732xsldkiJzcs8ZI2ou642Tq7Z67Y2TuyRF5uSeM0bUXNYbJ1dt9dqb9Mndm5gkKSC3ZSSpfG7L\n5IwRNZf1xslVW732Jn1bxsldksrn5J4zRtRc1hsnV2312hsnd0mKzMk9Z4youaw3Tq7a6rU3Tu6S\nFJmTe84YUXNZb5xctdVrb9Ind29ikqSA3JaRpPK5LZMzRtRc1hsnV2312pv0bRknd0kqn5N7zhhR\nc1lvnFy11WtvnNwlKTIn95wxouay3ji5aqvX3ji5S1JkTu45Y0TNZb1xctVWr71Jn9y9iUmSAnJb\nRpLK57ZMzhhRc1lvnFy11Wtv0rdlnNwlqXxO7jljRM1lvXFy1VavvXFyl6TI5l6ru3xbZhdwAjgF\n7LvCeR8FLgCfnXbCcDi8eEVaez5+nHJeKTGi5rLeOLlqq9fepM/Es64GG4GTwN3AeeAVYA/w1oTz\nngN+ATwBPDkhlpO7JKVZ+J77DuA0cKY9Pgzs5vLF/cvAt2mm96nWrkK596+WFSNqLuuNk6u2eu1N\n+p77rG2ZLcDZkeNz7c/Gz9kNPNoeO6FLUmazJvcuC/VDwFfaczdwhbcPo1eg8avRtNe6nldKjKi5\nrDdOrtrqtTdpZi3u54FtI8fbaKb3UbfTbNcAbAbuAd4FnhoPNhgMADhw4ACrq6usrKwAZbydWkSM\nqLmsN06u2uq9WnuztlZCs16mmHV52ETzgepdwDvAy0z+QHXNE8B3gH+b8JrbNZKUZuEfqF4A7gee\npflGzOM0C/ve9vWD8yQr+Yq7iBhRc1lvnFy11WtvmuMU3sQkSeXz1w/kjBE1l/XGyVVbvfbGyV2S\nInNyzxkjai7rjZOrtnrtTfrk7r/EJEkBuS0jSeVzWyZnjKi5rDdOrtrqtTfp2zJO7pJUPif3nDGi\n5rLeOLlqq9feOLlLUmRO7jljRM1lvXFy1VavvXFyl6TInNxzxoiay3rj5KqtXnuTPrl7E5MkBeS2\njCSVz22ZnDGi5rLeOLlqq9fepG/LOLlLUvmc3HPGiJrLeuPkqq1ee+PkLkmRObnnjBE1l/XGyVVb\nvfbGyV2SInNyzxkjai7rjZOrtnrtTfrk7k1MkhSQ2zKSVD63ZXLGiJrLeuPkqq1ee5O+LePkLknl\nc3LPGSNqLuuNk6u2eu2Nk7skRebknjNG1FzWGydXbfXaGyd3SYrMyT1njKi5rDdOrtrqtTfpk7s3\nMUlSQG7LSFL53JbJGSNqLuuNk6u2eu1N+raMk7sklc/JPWeMqLmsN06u2uq1N07ukhTZ3Gt112/L\n7AJOAKeAfRNe/zxwDHgDeAG4dVKQ4XB48Yq09nz8OOW8UmJEzWW9cXLVVq+9SZ+Ju1wNNgIngbuB\n88ArwB7grZFzPgb8APgZzYVgP7BzLI6TuySlWcqe+w7gNHCmPT4M7ObSxf3FkecvAVsnBVq7CuXe\nv1pWjKi5rDdOrtrqtTfpe+5dtmW2AGdHjs+1P5vmS8DTSdVIkhaiy+Q+z3bKp4D7gDsnvTh6BRq/\nGk17ret5pcSImst64+SqrV57k6bL4n4e2DZyvI1meh93K3CIZs/9p5MClfIWp7a3ZLlzWW+cXLXV\na2/SF/ouf2oTzQeqdwHvAC9z+QeqNwHPA18Ajk6JM887AEnSuqV8oHoBuB94luabM4/TLOx729cP\nAn8H/D7waPuzd2k+iL1EKVfB2q7auXNZb5xctdVrb5Y7uS+Kk7skpfHXD+SMETWX9cbJVVu99sbJ\nXZIic3LPGSNqLuuNk6u2eu1N+uTuv8QkSQG5LSNJ5XNbJmeMqLmsN06u2uq1N+nbMk7uklQ+J/ec\nMaLmst44uWqr1944uUtSZE7uOWNEzWW9cXLVVq+9cXKXpMic3HPGiJrLeuPkqq1ee5M+uXsTkyQF\n5LaMJJXPbZmcMaLmst44uWqr196kb8s4uUtS+Zzcc8aImst64+SqrV574+QuSZE5ueeMETWX9cbJ\nVVu99iZ9cverkJIUkNsyklQ+t2Vyxoiay3rj5KqtXnuTvi3j5C5J5XNyzxkjai7rjZOrtnrtjZO7\nJEXm5J4zRtRc1hsnV2312hsnd0mKzMk9Z4youaw3Tq7a6rU36ZO7NzFJUkBuy0hS+dyWyRkjai7r\njZOrtnrtTfq2jJO7JJXPyT1njKi5rDdOrtrqtTdO7pIUmZN7zhhRc1lvnFy11Wtvlju57wIeAjYC\njwFfm3DOw8A9wC+AvwBem3COk7skpZl7hZ/1PfeNwCM0C/yHgD3AB8fO+QzwPuAW4K+AR6cFGw6H\nF69Ia8/Hj1POKyVG1/NWV1d7y1VKjGnnjfei9HqXmWt1dbWqepcZY1IvSq532blSzFrcdwCngTPA\nu8BhYPfYOX8M/HP7/CXgeuDG5IquAkeOHMldQjHsxTp7sc5eLN+fAodGjr8AfH3snO8AHx85/i5w\n+4RYQx8+fPjwkfSY26zJvWvQ8f2giX+ulLc4ud+SDQaD3nKVEmPaeeO9KL3eZeYaDAZV1bvMGJN6\nUXK9y86VYtYm/U5gP82eO8ADwK+59EPVbwBHaLZsAE4AnwR+NBbrNHBzcqWSdHV6m+ZzzYXa1Abe\nDrwHeJ3JH6g+3T7fCRxddBGSpMW7BzhJM3k/0P5sb/tY80j7+jHgI71WJ0mSJCnNLpp991PAvinn\nPNy+fgz4cE915TCrF5+n6cEbwAvArf2V1rsufy8APgpcAD7bR1EZdOnDCs2NgG/SfJ4V1axebAae\nodkOfpPmBsmovknzOeXxK5yTdd3cSLM9sx24htl79HcQd4++Sy8+Bvxe+3wXV3cv1s57Hvh34E/6\nKq5HXfpwPfB9YGt7vLmv4nrWpRf7gQfb55uBn9Dzr0zp0SdoFuxpi/vc6+ai/yUmb3pa16UXLwI/\na5+/xPp/0NF06QXAl4FvA//bW2X96tKHe4EngXPt8Y/7Kq5nXXrxQ+C69vl1NIv7hZ7q69t/Aj+9\nwutzr5uLXty3AGdHjs+1P5t1TsRFrUsvRn2J9StzNF3/Xuxm/ddXpH/Bt1xd+nALcAOwCrwKfLGf\n0nrXpReHgD8E3qHZivibfkor0tzr5qLf4iz0pqfKzfP/6VPAfcCdS6olty69eAj4SnvuBvr9ddR9\n6dKHa2i+cXYXcC3Nu7ujNHutkXTpxVdptmtWaO6ReQ64Dfj58soq2lzr5qIX9/PAtpHjbay/vZx2\nztb2Z9F06QU0H6Ieotlzv9Lbspp16cXtrN8It5nmK7jvAk8tvbr+dOnDWZqtmF+2j+/RLGjRFvcu\nvfg48Pft87eB/wHeT/OO5mqTfd30pqd1XXpxE82+485eK+tfl16MeoKY35bp0ocP0Px+po00k/tx\nmt/IGk2XXvwjMGif30iz+N/QU305bKfbB6rZ1k1velo3qxeP0XxI9Fr7eLnvAnvU5e/FmqiLO3Tr\nw9/SfGPmOPDXvVbXr1m92EzziwmP0fTi3r4L7NG3aD5b+BXNu7f7uHrXTUmSJEmSJEmSJEmSJEmS\nJEmSJEk1+A0yH19MbcOAEQAAAABJRU5ErkJggg==\n",
-       "text": [
-        "<matplotlib.figure.Figure at 0x132e84c10>"
-       ]
       }
      ],
-     "prompt_number": 151
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -302,11 +305,11 @@
       "        k_ic_jf = order[(i, j+1)]\n",
       "        k_ic_jb = order[(i, j-1)]\n",
       "        \n",
-      "        A[k] = -2./dx_f/dx_b - 2./dy_f/dy_b\n",
-      "        A[k_if_jc] = 2./dx_f/dx_c\n",
-      "        A[k_ib_jc] = 2./dx_b/dx_c\n",
-      "        A[k_ic_jf] = 2./dy_f/dy_c\n",
-      "        A[k_ic_jb] =  2./dy_b/dy_c\n",
+      "        A[k, k] = -2./dx_f/dx_b - 2./dy_f/dy_b\n",
+      "        A[k, k_if_jc] = 2./dx_f/dx_c\n",
+      "        A[k, k_ib_jc] = 2./dx_b/dx_c\n",
+      "        A[k, k_ic_jf] = 2./dy_f/dy_c\n",
+      "        A[k, k_ic_jb] =  2./dy_b/dy_c\n",
       "        \n",
       "        f[k] = rhs[i,j]\n",
       "        \n",
@@ -402,7 +405,7 @@
       "        \n",
       "    \n",
       "    for k in xrange(mesh.num_inside + mesh.num_neumann, mesh.num_inside + mesh.num_neumann + mesh.num_dirichlet): \n",
-      "        A[k] = 1.\n",
+      "        A[k,k] = 1.\n",
       "        f[k] = mesh.dirichlet_values[k]\n",
       "        \n",
       "        \n",
@@ -411,7 +414,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 149
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -422,43 +425,30 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "KeyboardInterrupt",
-       "evalue": "",
-       "output_type": "pyerr",
-       "traceback": [
-        "Traceback (most recent call last):\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/IPython/kernel/zmq/ipkernel.py\", line 389, in execute_request\n    shell.run_cell(code, store_history=store_history, silent=silent)\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2743, in run_cell\n    self.events.trigger('post_execute')\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/IPython/core/events.py\", line 82, in trigger\n    func(*args, **kwargs)\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/IPython/kernel/zmq/pylab/backend_inline.py\", line 118, in flush_figures\n    return show(True)\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/IPython/kernel/zmq/pylab/backend_inline.py\", line 47, in show\n    matplotlib.pyplot.close('all')\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/matplotlib-1.4.x-py2.7-macosx-10.5-x86_64.egg/matplotlib/pyplot.py\", line 516, in close\n    _pylab_helpers.Gcf.destroy_all()\n",
-        "  File \"/Applications/anaconda/lib/python2.7/site-packages/matplotlib-1.4.x-py2.7-macosx-10.5-x86_64.egg/matplotlib/_pylab_helpers.py\", line 92, in destroy_all\n    gc.collect()\n",
-        "KeyboardInterrupt\n"
-       ]
-      }
-     ],
-     "prompt_number": 151
+     "outputs": [],
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "A\n",
+      "#900.*900/4204"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 147,
+       "prompt_number": 39,
        "text": [
-        "(576,)"
+        "<250000x250000 sparse matrix of type '<type 'numpy.float64'>'\n",
+        "\twith 1245004 stored elements in LInked List format>"
        ]
       }
      ],
-     "prompt_number": 147
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
